--- a/app.css
+++ b/app.css
@@ -54,6 +54,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
+  font-size: var(--font-md);
 }
 
 .navbar .nav-elements a {
@@ -177,7 +178,7 @@ section {
 .resources .box .subject::before {
   content: "";
   width: 100%;
-  height: 200px;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -311,20 +312,14 @@ section {
   background-color: var(--main-color);
 }
 
-@media only screen and (max-width: 500px) {
-  .two-section {
-    flex-direction: column;
-  }
-  .two-section .left {
-    width: 100%;
+@media only screen and (max-width: 700px) {
+  section {
+    width: 95%;
   }
 
-  .two-section .right {
-    width: 100%;
+  .navbar .nav-elements {
+    display: none;
   }
-}
-
-@media only screen and (max-width: 750px) {
   .two-section {
     flex-direction: column;
   }
@@ -337,8 +332,8 @@ section {
   }
 
   .main .left img {
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 400px;
   }
   .main .right {
     font-size: var(--font-sm);
@@ -346,13 +341,77 @@ section {
   }
 
   .resources .box {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+
+  .resources .box .subject {
+    height: 250px;
   }
 
   .card {
     margin: 30px;
+  }
+
+  .section-heading {
+    font-size: var(--font-md);
+  }
+
+  .about .left h2 {
+    font-size: var(--font-sm);
+  }
+
+  .about .left p {
+    font-size: var(--font-sm);
+  }
+
+  .footer p {
+    font-size: 18px;
+  }
+
+  .social-icons a {
+    width: 2;
+    height: 2rem;
+    font-size: 1.5rem;
+    border-radius: 50%;
+  }
+}
+
+@media only screen and (max-width: 925px) and (min-width: 700px) {
+  .navbar .nav-elements {
+    font-size: var(--font-sm);
+  }
+  .main .left {
+    padding: 20px;
+  }
+
+  .main .left img {
+    width: 350px;
+    height: 350px;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .main .right {
+    align-items: flex-start;
+    justify-content: center;
+    font-size: var(--font-md);
+    padding: 0 32px;
+  }
+
+  .resources .box {
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+  }
+
+  .resources .box .subject {
+    height: 180px;
+  }
+
+  .social-icons a {
+    width: 2.2;
+    height: 2.25rem;
+    font-size: 1.25rem;
+    border-radius: 50%;
   }
 }
