--- a/page.css
+++ b/page.css
@@ -21,7 +21,6 @@ aside ul {
 }
 
 aside ul li {
-  font-size: 24px;
   padding: 10px;
   border-bottom: 1px solid black;
   font-weight: 500;
@@ -60,4 +59,30 @@ aside ul li.active {
   top: 0;
   width: 85vw;
   height: 100vh;
+}
+
+@media only screen and (max-width: 1055px) {
+  aside {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 925px) {
+  aside {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 925px) {
+  aside {
+    display: none;
+  }
+
+  .mainFrame {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+  }
 }
