--- a/app.css
+++ b/app.css
@@ -33,6 +33,7 @@ body {
   padding: 10px 20px;
   background-color: white;
   width: 100%;
+  box-sizing: border-box;
 }
 .navbar a {
   text-decoration: none;
@@ -283,6 +284,8 @@ section {
   display: flex;
   align-items: center;
   flex-direction: column;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 .footer .section-heading {
